crates/iroha_ffi_derive/tests/ui_fail/private_method_inside_impl_are_skipped.stderr
error[E0425]: cannot find function, tuple struct or tuple variant `FfiStruct__private` in this scope
  --> tests/ui_fail/private_method_inside_impl_are_skipped.rs:17:9
   |
17 |         FfiStruct__private(FfiConvert::into_ffi(s, &mut ()));
   |         ^^^^^^^^^^^^^^^^^^ not found in this scope
